--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(metody-numeryczne main.cpp
         labOneMethods/GaussMethod.cpp labOneMethods/JordanMethod.cpp labOneMethods/Derivative.cpp
+        labTwoMethods/UARLMethod.cpp
         utils/PrintUtils.cpp utils/MatrixUtils.cpp utils/GeneralUtils.cpp)
 
 include_directories(utils labOneMethods consts)
